--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -5,12 +5,13 @@
     <title>受講生登録</title>
 </head>
 <body>
-<h1>受講生登録</h1>
-<form th:action="@{/registerStudent}" th:object="${studentDetail}" method="post">
-<div>
-    <label for="name">名前</label>
-    <input type="text" id="name" th:field="*{student.name}" required />
-</div>
+<h1>受講生更新</h1>
+<form th:action="@{/updateStudent}" th:object="${studentDetail}" method="post">
+    <input type="hidden" th:filed="*{student.id}" />
+    <div>
+        <label for="name">名前</label>
+        <input type="text" id="name" th:field="*{student.name}" required />
+    </div>
     <div>
         <label for="kana">カナ名</label>
         <input type="text" id="kana" th:field="*{student.kana}" required />
@@ -43,9 +44,9 @@
         <label for="courseName" th:for="studentsCourses.__${stat.index}__.courseName">受講コース名： </label>
         <input type="text" id="courseName" th:id="studentsCourses.__${stat.index}__.courseName" th:field="*{studentsCourses[__${stat.index}__].courseName}" />
     </div>
-<div>
-    <button type="submit">登録</button>
-</div>
+    <div>
+        <button type="submit">更新</button>
+    </div>
 </form>
 
 </body>
