--- a/src/main/resources/templates/studentList.html
+++ b/src/main/resources/templates/studentList.html
@@ -24,7 +24,11 @@
     <tbody>
     <tr th:each="studentDetail : ${studentList}">
         <td th:text="${studentDetail.student.id}"></td>
-        <td th:text="${studentDetail.student.name}"></td>
+        <td><a th:href="@{/updateStudent(id=${studentDetail.student.id})}"
+               th:text="${studentDetail.student.name}">
+            </a>
+        </td>
+
         <td th:text="${studentDetail.student.kana}"></td>
         <td th:text="${studentDetail.student.nickname}"></td>
         <td th:text="${studentDetail.student.email}"></td>
