--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -2,47 +2,63 @@
 <html  lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>受講生登録</title>
+    <title>受講生詳細</title>
 </head>
 <body>
-<h1>受講生更新</h1>
+<h1>受講生詳細</h1>
 <form th:action="@{/updateStudent}" th:object="${studentDetail}" method="post">
-    <input type="hidden" th:filed="*{student.id}" />
     <div>
-        <label for="name">名前</label>
+        <label for="id">ID:</label>
+        <input type="text" id="id" th:field="*{student.id}" required />
+    </div>
+    <div>
+        <label for="name">名前:</label>
         <input type="text" id="name" th:field="*{student.name}" required />
     </div>
     <div>
-        <label for="kana">カナ名</label>
-        <input type="text" id="kana" th:field="*{student.kana}" required />
+        <label for="kanaName">カナ名:</label>
+        <input type="text" id="kanaName" th:field="*{student.kanaName}" required />
     </div>
     <div>
-        <label for="nickname">ニックネーム</label>
+        <label for="nickname">ニックネーム:</label>
         <input type="text" id="nickname" th:field="*{student.nickname}" required />
     </div>
     <div>
-        <label for="email">メールアドレス</label>
+        <label for="email">メールアドレス:</label>
         <input type="text" id="email" th:field="*{student.email}" required />
     </div>
     <div>
-        <label for="area">地域</label>
+        <label for="area">地域:</label>
         <input type="text" id="area" th:field="*{student.area}" required />
     </div>
     <div>
-        <label for="age">年齢</label>
+        <label for="age">年齢:</label>
         <input type="text" id="age" th:field="*{student.age}" />
     </div>
     <div>
-        <label for="sex">性別</label>
-        <input type="text" id="sex" th:field="*{student.sex}" required />
+        <label for="sex">性別:</label>
+        <input type="text" id="sex" th:field="*{student.sex}" />
     </div>
     <div>
         <label for="remark">備考：</label>
         <input type="text" id="remark" th:field="*{student.remark}" />
     </div>
+    <div>
+        <label>
+            <input type="checkbox" th:field="*{student.deleted}" />
+            キャンセル（非表示にする）
+        </label>
+    </div>
+
     <div th:each="course,stat : *{studentsCourses}">
-        <label for="courseName" th:for="studentsCourses.__${stat.index}__.courseName">受講コース名： </label>
-        <input type="text" id="courseName" th:id="studentsCourses.__${stat.index}__.courseName" th:field="*{studentsCourses[__${stat.index}__].courseName}" />
+        <label for="id"
+               th:for="studentsCourses.__${stat.index}__.id">受講コースID： </label>
+        <input type="text" id="id" th:id="studentsCourses.__${stat.index}__.id"
+               th:field="*{studentsCourses[__${stat.index}__].id}" />
+        <label for="courseName"
+               th:for="studentsCourses.__${stat.index}__.courseName">受講コース名： </label>
+        <input type="text" id="courseName" th:id="studentsCourses.__${stat.index}__.courseName"
+               th:field="*{studentsCourses[__${stat.index}__].courseName}" />
     </div>
     <div>
         <button type="submit">更新</button>
