--- a/src/main/resources/templates/studentList.html
+++ b/src/main/resources/templates/studentList.html
@@ -19,6 +19,7 @@
         <th>性別</th>
         <th>備考</th>
         <th>コース一覧</th>
+        <th>キャンセル</th>
     </tr>
     </thead>
     <tbody>
@@ -34,6 +35,9 @@
         <td th:text="${studentDetail.student.age}">25</td>
         <td th:text="${studentDetail.student.sex}">男性</td>
         <td th:text="${studentDetail.student.remark}">特になし</td>
+        <td>
+            <input type="checkbox" th:checked="${studentDetail.student.isDeleted}" />
+        </td>
     </tr>
     </tbody>
 </table>
